Switched prompts to checkbox and templated index.html

--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-		<title>Bayse</title>
-		<meta name="title" content="Bayse">
-		<meta name="description" content="Web project starter template" />
-		<meta name="keywords" content="bayse,web app" />
-		<meta name="author" content="Luke Hedger" />
-		<meta name="copyright" content="Copyright Luke Hedger 2014. All Rights Reserved.">
+		<title><%= name %></title>
+		<meta name="title" content="<%= name %>">
+		<meta name="description" content="<%= description %>" />
+		<meta name="keywords" content="<%= name %>,web app" />
+		<meta name="author" content="" />
+		<meta name="copyright" content="Copyright 2014. All Rights Reserved.">
 		<link rel="shortcut icon" href="img/favicon.ico">
 		<link rel="stylesheet" href="css/main.css">
 		<!--[if lt IE 9]>
@@ -25,7 +25,7 @@
 
 		<section role="document">
 			<section role="main">
-				<h1>Bayse</h1>
+				<h1><%= name %></h1>
 				<div class="grid">
 					<div class="row">
 						<div class="column twelve">
