--- a/app/templates/_css/lib/typography.css
+++ b/app/templates/_css/lib/typography.css
@@ -1,66 +1,7 @@
-/* ==========================================================================
-   TYPOGRAPHY
-   ========================================================================== */
-
-html,body,button,input,select,textarea {
-	color:#444;
-}
-
-body {
-	font: normal 1em/1.4 Helvetica, Arial, sans-serif;
-	text-shadow: #fff 0 1px 0;
-}
-
-h1 {
-
-}
-
-h2 {
-	
-}
-
-h3 {
-
-}
-
-h4 {
-
-}
-
-h5 {
-	
-}
-
-h6 {
-
-}
-
-p {
-
-}
-
-a {
-	color: #F2385A;
-	transition: 0.2s;
-	text-decoration: none;
-	text-shadow: none;
-	cursor: pointer;
-	-webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-a:hover {
-	color: #36B1BF;
-}
-
-/*
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    background: #36B1BF;
-    text-shadow: none;
-}
-
-::selection {
-    background: #36B1BF;
-    text-shadow: none;
-}
+body,button,html,input,select,textarea{color:#444}
+body{font:400 1em/1.4 Helvetica,Arial,sans-serif;text-shadow:#fff 0 1px 0}
+h1{color:#FD615B}
+a{color:#F2385A;-webkit-transition:.2s;transition:.2s;text-decoration:none;text-shadow:none;cursor:pointer;-webkit-tap-highlight-color:transparent}
+a:hover{color:#36B1BF}
+::-moz-selection{background:#36B1BF;text-shadow:none}
+::selection{background:#36B1BF;text-shadow:none}
